--- a/public/locales/en/credentials.json
+++ b/public/locales/en/credentials.json
@@ -1,1 +1,88 @@
-{}
+{
+    "hero": {
+        "title": "Our Case Studies",
+        "subtitle": "See how we've helped organizations transform their data and streamline their operations."
+    },
+    "successStories": {
+        "title": "Success Stories",
+        "subtitle": "Real results for real clients across industries and data needs.",
+        "viewCaseStudy": "View Case Study"
+    },
+    "detailedCase": {
+        "who": "WHO",
+        "what": "WHAT",
+        "how": "HOW",
+        "getSimilarResults": "Get Similar Results"
+    },
+    "results": {
+        "title": "Results That Matter",
+        "subtitle": "Our data services deliver measurable business impact.",
+        "accuracy": {
+            "number": "98%",
+            "label": "Data Accuracy",
+            "description": "Our quality control process ensures near-perfect data accuracy across all projects."
+        },
+        "costReduction": {
+            "number": "45%",
+            "label": "Cost Reduction",
+            "description": "Clients typically see significant cost savings compared to in-house data operations."
+        },
+        "delivery": {
+            "number": "3x",
+            "label": "Faster Delivery",
+            "description": "Our specialized teams deliver results up to three times faster than traditional methods."
+        }
+    },
+    "industries": {
+        "title": "Industries We Serve",
+        "subtitle": "We work across sectors to deliver data solutions tailored to specific industry needs."
+    },
+    "cta": {
+        "title": "Ready to become our next success story?",
+        "subtitle": "Contact us today to discuss how we can help transform your data challenges into business advantages.",
+        "btnContact": "Contact Us",
+        "btnServices": "View Services"
+    },
+    "cases": {
+        "adaire": {
+            "project": "Project Management Data Migration",
+            "description": "Manual data migration for a software development company transitioning to a new project management tool.",
+            "who": "Adaire is a software development company based in Namibia and serving clients across Germany and Switzerland. Their flagship outsourcing services are used by some of Europe's largest private and public organizations.",
+            "what": "Adaire was transitioning to a new project management tool and required manual data migration services to ensure accuracy and proper structuring within their new tool.",
+            "how": "Project data including owner, status, categories, label, and other fields task data was downloaded from Azure DevOps, adjusted to the correct format, then manually imported into Jira.",
+            "challenge": "Transitioning to a new project management tool.",
+            "solution": "Delivered manual data migration with accuracy checks.",
+            "outcome": "Smooth adoption with zero data loss."
+        },
+        "ddd": {
+            "project": "Autonomous Driving Annotation",
+            "description": "Annotation of images for an autonomous driving project.",
+            "who": "Digital Divine Data (DDD) is a specialized data annotation company focusing on AI training datasets.",
+            "what": "DDD collaborated with Label Ladder on the annotation of images for an autonomous driving project, requiring precise object detection and classification for vehicle AI systems.",
+            "how": "Our expert annotation team provided detailed labeling of road scenes, vehicles, pedestrians, and traffic infrastructure to support autonomous driving algorithm development.",
+            "challenge": "Needed to merge tools into one unified workflow.",
+            "solution": "Assisted with setup, integration, and testing.",
+            "outcome": "Faster onboarding and improved collaboration."
+        },
+        "ambulanzpartner": {
+            "project": "Healthcare Data Processing",
+            "description": "Data processing and annotation for healthcare applications.",
+            "who": "Ambulanzpartner provides emergency medical services and healthcare solutions.",
+            "what": "Label Ladder assisted Ambulanzpartner in processing and annotating healthcare data to improve patient care.",
+            "how": "Our team ensured high-quality annotations and data processing to meet the specific needs of healthcare applications.",
+            "challenge": "Large amounts of patient data with inconsistent records.",
+            "solution": "Cleaned, validated, and standardized datasets.",
+            "outcome": "Reliable reporting and better decision-making."
+        },
+        "impactTank": {
+            "project": "Data Pipeline Setup",
+            "description": "Designed and implemented data pipeline for a wildlife conservation project.",
+            "who": "Impact Tank is a Namibian-Swiss impact venture builder focused on social impact through data-driven solutions and community development in Africa.",
+            "what": "Impact Tank required a robust data pipeline to support their wildlife conservation project, enabling efficient data collection, processing, and analysis for environmental impact monitoring.",
+            "how": "Label Ladder's team designed and implemented a comprehensive data pipeline architecture for wildlife conservation data, including automated data ingestion, processing workflows, and analytics capabilities.",
+            "challenge": "Need for scalable data infrastructure to support wildlife conservation efforts and impact measurement.",
+            "solution": "Implemented automated data pipeline with real-time processing and analytics capabilities.",
+            "outcome": "Enhanced conservation monitoring and data-driven decision making for community impact projects."
+        }
+    }
+}
