--- a/public/locales/de/credentials.json
+++ b/public/locales/de/credentials.json
@@ -1,1 +1,88 @@
-{}
+{
+    "hero": {
+        "title": "Unsere Fallstudien",
+        "subtitle": "Sehen Sie, wie wir Organisationen geholfen haben, ihre Daten zu transformieren und ihre Abläufe zu optimieren."
+    },
+    "successStories": {
+        "title": "Erfolgsgeschichten",
+        "subtitle": "Echte Ergebnisse für echte Kunden über Branchen und Datenanforderungen hinweg.",
+        "viewCaseStudy": "Fallstudie ansehen"
+    },
+    "detailedCase": {
+        "who": "WER",
+        "what": "WAS",
+        "how": "WIE",
+        "getSimilarResults": "Ähnliche Ergebnisse erzielen"
+    },
+    "results": {
+        "title": "Ergebnisse, die zählen",
+        "subtitle": "Unsere Datendienste liefern messbaren Geschäftswert.",
+        "accuracy": {
+            "number": "98%",
+            "label": "Datengenauigkeit",
+            "description": "Unser Qualitätskontrollprozess gewährleistet nahezu perfekte Datengenauigkeit über alle Projekte hinweg."
+        },
+        "costReduction": {
+            "number": "45%",
+            "label": "Kostensenkung",
+            "description": "Kunden sehen typischerweise erhebliche Kosteneinsparungen im Vergleich zu internen Datenoperationen."
+        },
+        "delivery": {
+            "number": "3x",
+            "label": "Schnellere Lieferung",
+            "description": "Unsere spezialisierten Teams liefern Ergebnisse bis zu dreimal schneller als traditionelle Methoden."
+        }
+    },
+    "industries": {
+        "title": "Branchen, die wir bedienen",
+        "subtitle": "Wir arbeiten branchenübergreifend, um auf spezifische Branchenbedürfnisse zugeschnittene Datenlösungen zu liefern."
+    },
+    "cta": {
+        "title": "Bereit, unsere nächste Erfolgsgeschichte zu werden?",
+        "subtitle": "Kontaktieren Sie uns noch heute, um zu besprechen, wie wir Ihre Datenherausforderungen in Geschäftsvorteile verwandeln können.",
+        "btnContact": "Kontaktieren Sie uns",
+        "btnServices": "Dienstleistungen ansehen"
+    },
+    "cases": {
+        "adaire": {
+            "project": "Projektmanagement-Datenmigration",
+            "description": "Manuelle Datenmigration für ein Softwareentwicklungsunternehmen, das auf ein neues Projektmanagement-Tool umsteigt.",
+            "who": "Adaire ist ein Softwareentwicklungsunternehmen mit Sitz in Namibia, das Kunden in Deutschland und der Schweiz bedient. Ihre Outsourcing-Dienstleistungen werden von einigen der größten privaten und öffentlichen Organisationen Europas genutzt.",
+            "what": "Adaire wechselte zu einem neuen Projektmanagement-Tool und benötigte manuelle Datenmigrationsdienstleistungen, um Genauigkeit und korrekte Strukturierung im neuen Tool sicherzustellen.",
+            "how": "Projektdaten einschließlich Eigentümer, Status, Kategorien, Label und anderen Feldern wurden von Azure DevOps heruntergeladen, in das richtige Format angepasst und dann manuell in Jira importiert.",
+            "challenge": "Umstellung auf ein neues Projektmanagement-Tool.",
+            "solution": "Manuelle Datenmigration mit Genauigkeitsprüfungen durchgeführt.",
+            "outcome": "Reibungslose Einführung ohne Datenverlust."
+        },
+        "ddd": {
+            "project": "Autonomes Fahren Annotation",
+            "description": "Annotation von Bildern für ein autonomes Fahrprojekt.",
+            "who": "Digital Divine Data (DDD) ist ein spezialisiertes Datenannotationsunternehmen, das sich auf KI-Trainingsdatensätze konzentriert.",
+            "what": "DDD arbeitete mit Label Ladder an der Annotation von Bildern für ein autonomes Fahrprojekt zusammen, das präzise Objekterkennung und Klassifizierung für Fahrzeug-KI-Systeme erforderte.",
+            "how": "Unser Expertenannotationsteam lieferte detaillierte Beschriftung von Straßenszenen, Fahrzeugen, Fußgängern und Verkehrsinfrastruktur zur Unterstützung der Algorithmenentwicklung für autonomes Fahren.",
+            "challenge": "Tools in einen einheitlichen Workflow zusammenführen.",
+            "solution": "Unterstützung bei Setup, Integration und Tests.",
+            "outcome": "Schnelleres Onboarding und verbesserte Zusammenarbeit."
+        },
+        "ambulanzpartner": {
+            "project": "Gesundheitsdatenverarbeitung",
+            "description": "Datenverarbeitung und Annotation für Gesundheitsanwendungen.",
+            "who": "Ambulanzpartner bietet medizinische Notfalldienste und Gesundheitslösungen an.",
+            "what": "Label Ladder unterstützte Ambulanzpartner bei der Verarbeitung und Annotation von Gesundheitsdaten zur Verbesserung der Patientenversorgung.",
+            "how": "Unser Team gewährleistete hochwertige Annotationen und Datenverarbeitung, um den spezifischen Anforderungen von Gesundheitsanwendungen gerecht zu werden.",
+            "challenge": "Große Mengen an Patientendaten mit inkonsistenten Aufzeichnungen.",
+            "solution": "Datensätze bereinigt, validiert und standardisiert.",
+            "outcome": "Zuverlässige Berichterstattung und bessere Entscheidungsfindung."
+        },
+        "impactTank": {
+            "project": "Daten-Pipeline-Einrichtung",
+            "description": "Entwurf und Implementierung einer Daten-Pipeline für ein Wildtierschutzprojekt.",
+            "who": "Impact Tank ist ein namibisch-schweizerischer Impact-Venture-Builder, der sich auf soziale Wirkung durch datengetriebene Lösungen und Community-Entwicklung in Afrika konzentriert.",
+            "what": "Impact Tank benötigte eine robuste Daten-Pipeline zur Unterstützung ihres Wildtierschutzprojekts, um effiziente Datenerfassung, -verarbeitung und -analyse für Umwelt-Impact-Monitoring zu ermöglichen.",
+            "how": "Das Team von Label Ladder entwarf und implementierte eine umfassende Daten-Pipeline-Architektur für Wildtierschutzdaten, einschließlich automatisierter Datenaufnahme, Verarbeitungsworkflows und Analysefunktionen.",
+            "challenge": "Bedarf an skalierbarer Dateninfrastruktur zur Unterstützung von Wildtierschutzbemühungen und Impact-Messung.",
+            "solution": "Automatisierte Daten-Pipeline mit Echtzeit-Verarbeitung und Analysefunktionen implementiert.",
+            "outcome": "Verbessertes Naturschutzmonitoring und datengestützte Entscheidungsfindung für Community-Impact-Projekte."
+        }
+    }
+}
